landing branch fix to trunk. Bug #47248 ---> Fix GetParent such that if appendedPath is an empy string we treat it the same as if it were null and create a dummy path.r=dougt